Added item type decision

--- a/item-workflow/appsettings.json
+++ b/item-workflow/appsettings.json
@@ -9,6 +9,7 @@
   "AllowedHosts": "*",
 
   "ConnectionStrings": {
-    "TestDB": "Server=(local);Database=testwfdb;user id=sa;password=***"
+    "TestDB": "Server=(local);Database=testwfdb;user id=sa;password=***REMOVED***",
+    "WorkflowDB": "Server=(local);Database=WorkflowCore;user id=sa;password=***REMOVED***"
   }
 }
