--- a/item-workflow.tests/item-workflow.tests.csproj
+++ b/item-workflow.tests/item-workflow.tests.csproj
@@ -12,6 +12,17 @@
     <PackageReference Include="xunit" Version="2.4.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
     <PackageReference Include="coverlet.collector" Version="1.2.0" />
+    <PackageReference Include="WorkflowCore.Testing" Version="2.3.0" />
+    <PackageReference Include="WorkflowCore" Version="3.3.2" />
+    <PackageReference Include="FluentAssertions" Version="5.10.3" />
+    <PackageReference Include="NUnit" Version="3.12.0" />
+    <PackageReference Include="NUnit3TestAdapter" Version="3.17.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\item-workflow\item-workflow.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Workflow\" />
+  </ItemGroup>
 </Project>
