--- a/item-workflow/appsettings.json
+++ b/item-workflow/appsettings.json
@@ -9,7 +9,7 @@
   "AllowedHosts": "*",
 
   "ConnectionStrings": {
-    "TestDB": "Server=(local);Database=testwfdb;user id=sa;password=***REMOVED***",
-    "WorkflowDB": "Server=(local);Database=WorkflowCore;user id=sa;password=***REMOVED***"
+    "TestDB": "Server=(local);Database=testwfdb;user id=sa;password=Bu77sh!t",
+    "WorkflowDB": "Server=(local);Database=WorkflowCore;user id=sa;password=Bu77sh!t"
   }
 }
