parallel workflow, rename dbcontext

--- a/item-workflow/appsettings.json
+++ b/item-workflow/appsettings.json
@@ -9,7 +9,11 @@
   "AllowedHosts": "*",
 
   "ConnectionStrings": {
-    "TestDB": "Server=(local);Database=testwfdb;user id=sa;password=xxx",
-    "WorkflowDB": "Server=(local);Database=WorkflowCore;user id=sa;password=xxx"
+    "TestDB": "Server=(local);Database=testwfdb;user id=sa",
+    "WorkflowDB": "Server=(local);Database=WorkflowCore;user id=sa"
+  },
+  "ItemWF": {
+    "ServiceApiKey": "12345"
   }
+
 }
