added approval, parallel, and if steps

--- a/item-workflow/item-workflow.csproj
+++ b/item-workflow/item-workflow.csproj
@@ -22,5 +22,6 @@
     <Folder Include="Workflows\" />
     <Folder Include="Model\" />
     <Folder Include="Database\" />
+    <Folder Include="Middleware\" />
   </ItemGroup>
 </Project>
