--- a/item-workflow/item-workflow.csproj
+++ b/item-workflow/item-workflow.csproj
@@ -17,6 +17,7 @@
     <PackageReference Include="Serilog.Sinks.RollingFile" Version="3.3.0" />
     <PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
     <PackageReference Include="WorkflowCore.Persistence.SqlServer" Version="3.1.0" />
+    <PackageReference Include="WorkflowCore.Users" Version="2.1.1" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Workflows\" />
